# anything-library-test01

./: .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject-fmt.toml  pyproject.toml  pytest.toml  renovate.json5  ruff.toml
.github/workflows/: git-hooks.yml  release.yml  tests.yml
