[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "anything-library-test01"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Ülgen Sarıkavak", email = "janedoe@example.com" },
]
requires-python = ">=3.12,<3.15"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[dependency-groups]
dev = [
    "ipdb==0.13.13",
    "ipython==9.15.0",
    { include-group = "pytest" },
]
pytest = [
    "pytest==9.1.1",
    "pytest-randomly==4.1.0",
    "pytest-xdist==3.8.0",
]

[tool.uv]
# The earliest version that supports the current lock file revision
required-version = ">=0.8.4"
